# vital_agent_bot

./: .env.example  README.md  docker-compose.yml  pyproject.toml
bot/: main.py
bot/core/: config.py  db.py
bot/handlers/: __init__.py  start.py
bot/handlers/habits/: create_habit.py  habit_list.py  habits.py  today_habit.py
bot/keyboards/: start.py
bot/keyboards/habits/: callbacks.py  habit_kb.py
bot/models/: base.py  tele_user.py
bot/repository/: teleuser.py
bot/services/: errors.py  requests.py  teleuser.py
bot/utils/: progress.py
migration/: env.py
migration/versions/: 59ca268999a4_.py
